syntax = "proto3";
package mexamplechain.mexamplemodule;

option go_package = "m-example-chain/x/mexamplemodule/types";

message EntityName {
  uint64 id = 1;
  string field1 = 2; 
  int32 field2 = 3; 
  string creator = 4;
}
