syntax = "proto3";

package mexamplechain.mexamplemodule;

import "gogoproto/gogo.proto";
import "mexamplechain/mexamplemodule/params.proto";
import "mexamplechain/mexamplemodule/entity_name.proto";

option go_package = "m-example-chain/x/mexamplemodule/types";

// GenesisState defines the mexamplemodule module's genesis state.
message GenesisState {
           Params     params          = 1 [(gogoproto.nullable) = false];
  repeated EntityName entityNameList  = 2 [(gogoproto.nullable) = false];
           uint64     entityNameCount = 3;
}

